yaml/FokDeploymentServiceBasketApi.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    name: reti-lab-foodonkontainers-basket-api
  name: reti-lab-foodonkontainers-basket-api
spec:
  selector:
    app: fok-basket
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
kind: Service
apiVersion: v1
metadata:
 name: sqlconnection
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
---
kind: Endpoints
apiVersion: v1
metadata:
 name: sqlconnection 
subsets:
 - addresses:
     - ip: 10.1.2.252
   ports:
     - port: 1433
